<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        app:layout_constraintBottom_toTopOf="@id/productsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Theme.MercadoLibre.AppBarOverlay">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/home_title"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/productsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/this_caught_your_attention"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toTopOf="@id/recyclerProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProducts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="?attr/variantStyle">

        <Button
            android:id="@+id/buttonSearch"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="recyclerProducts,productsTitle" />


</androidx.constraintlayout.motion.widget.MotionLayout>